<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/flAllStreetViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.example.mobdev21_night_at_the_museum.presentation.widget.CollectionView
            android:id="@+id/cvAllStreetView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/dimen_20" />

    </FrameLayout>
...
