...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_228">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivHomeStreetViewThumbnail"
                android:layout_width="@dimen/dimen_200"
                android:layout_height="@dimen/dimen_200"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                tools:src="@color/black" />

...
