...
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_14" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvHomeStreetViewViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            app:cardCornerRadius="@dimen/dimen_corner_30"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@id/tvProfileFullName"
...
